Levitation import of page 2054 rev 8923 (minor).

--- a/0-/Client:XMMS2tray.mediawiki
+++ b/0-/Client:XMMS2tray.mediawiki
@@ -5,7 +5,8 @@
 | website=[http://code.jollybox.de/wiki/Software/Xmms2tray http://code.jollybox.de/wiki/Software/Xmms2tray]
 | version=0.5.1
 | devlanguage=Python
-| ui=GTK+2, tray icon
+| ui=GTK+2
+| ui2=tray icon
 | screenshots=[http://code.jollybox.de/pub/xmms2tray/screenshots/]
 }}
 
