--- a/0-/Component:Ruby bindings.mediawiki
+++ b/0-/Component:Ruby bindings.mediawiki
@@ -43,3 +43,13 @@ end
 Keep in mind that you need to return ''true'' or ''false'' inside a notifier block. ''true'' means you want to receive events of this type in the future. While ''false'' means you will not receive events of this type anymore. Ruby will use last calculated value as a result if you don't explicitly specify it which may result in weird error messages.
 
 For information about specific broadcasts see [[Component:Ruby_bindings/Broadcasts | Ruby_bindings/Broadcasts]].
+
+== Signals ==
+
+TODO: write something
+
+== Other queries ==
+
+Methods in this sections are useful when you want actively query XMMS2 for something (reading song metadata by it's id, etc.).
+
+For information about specific queries see [[Component:Ruby_bindings/Other queries | Ruby_bindings/Other queries]].
