/* coll_get(name, [ns]) */
Levitation import of page 2536 rev 8936 (minor).

--- a/0-/Component:Ruby bindings/Other queries.mediawiki
+++ b/0-/Component:Ruby bindings/Other queries.mediawiki
@@ -2,7 +2,7 @@
 
 == coll_get(name, [ns]) ==
 
-* '''ns''' - namespace. There is a predefined namespace Xmms::Collection::NS_PLAYLISTS for playlists.
+* '''ns''' - namespace. There is a predefined namespace ''Xmms::Collection::NS_PLAYLISTS'' for playlists.
 
 == playback_volume_get ==
 
