--- a/0-/Client:xmms2-notify.mediawiki
+++ b/0-/Client:xmms2-notify.mediawiki
@@ -1,1 +1,12 @@
-{{Client| name=xmms2-notify| author=Evan McClain| website=[http://github.com/aeroevan/xmms2-notify/tree/master/ http://github.com/aeroevan/xmms2-notify/]| version=0.1.0| devlanguage=C| ui=libnotify notification| screenshots=http://www.prism.gatech.edu/~gtg031s/files/xmms2-notify.png| description=libnotify client that displays info for current song playing in XMMS2. Based off of [[Client:Dabra | Dabra]].}}
+{{
+Client
+|image=Client-xmms2-notify.png
+|name=xmms2-notify
+|author=Evan McClain
+|website=[http://github.com/aeroevan/xmms2-notify/tree/master/ http://github.com/aeroevan/xmms2-notify/]
+|version=0.1.0
+|devlanguage=C
+|ui=libnotify notification
+|screenshots=http://www.prism.gatech.edu/~gtg031s/files/xmms2-notify.png
+|description=libnotify client that displays info for current song playing in XMMS2. Based off of [[Client:Dabra | Dabra]].
+}}
