/* Cleaner and Correct Version of the Emacs Style Below */ Show trailing whitespace
Levitation import of page 1159 rev 8944 (minor).

--- a/0-/Emacs C style.mediawiki
+++ b/0-/Emacs C style.mediawiki
@@ -17,11 +17,11 @@ Instead create a file named <tt>xmms2-style.el</tt> and insert the following:
 
 (defun maybe-xmms2-style ()
   "Set the style used in xmms2, requires smart tabs."
-  (if (string-match "xmms2" buffer-file-name)
-      (progn
+  (when (string-match "xmms2" buffer-file-name)
+        (setq show-trailing-whitespace t)
         (setq indent-tabs-mode t)
         (setq tab-width 4)
-        (c-set-style "xmms2"))))
+        (c-set-style "xmms2")))
 
 (add-hook 'c-mode-common-hook 'maybe-xmms2-style)
 
