mark out of date
Levitation import of page 1225 rev 8946 (minor).

--- a/0-/Generic properties policy.mediawiki
+++ b/0-/Generic properties policy.mediawiki
@@ -1,3 +1,4 @@
+{{update}}
 __NOTOC__
 
 This page tries to list all properties that different clients write into the medialib and that can be useful for other clients too.
