--- a/0-/Client:xmms2-cdinfo.mediawiki
+++ b/0-/Client:xmms2-cdinfo.mediawiki
@@ -2,7 +2,7 @@
 Client
 |name=xmms2-freesb
 |author=Tomasz Sobczyk
-|website=[http://blog.asth.net/1?id=259]
+|website=[http://xmms2freedb.asth.net/]
 |version=0.1.1
 |devlanguage=C++
 }}
