--- a/0-/Client:xmms2-cdinfo.mediawiki
+++ b/0-/Client:xmms2-cdinfo.mediawiki
@@ -7,8 +7,9 @@ Client
 |devlanguage=C++
 }}
 === What is xmms2-freedb? ===
-When xmms2-freedb is run, it waits till an entry to medialib is added, and when it's a cdda:// entry, it looks up the CD infromation in a remote CD-Audio database and update the fields.
+When xmms2-freedb is run, it waits till an entry to medialib is added, and when it's a cdda:// entry, it looks up the CD information in a remote CD-Audio database and update the fields.
 Currently the application is set to use freedb.freedb.org via CDDB protocol as there's no config yet.
+
 === Requirements ===
 * glibc
 * libdiscid
