Levitation import of page 2515 rev 8957 (minor).

--- a/0-/Client:xmms2-cdinfo.mediawiki
+++ b/0-/Client:xmms2-cdinfo.mediawiki
@@ -2,7 +2,7 @@
 Client
 |name=xmms2-freedb
 |author=Tomasz Sobczyk
-|website=[http://xmms2freedb.asth.net/]
+|website=[http://asth.net/(+xmms2freedb)]
 |version=0.1.1
 |devlanguage=C++
 }}
