Levitation import of page 2512 rev 8968 (minor).

--- a/0-/Client:Etude.mediawiki
+++ b/0-/Client:Etude.mediawiki
@@ -1,1 +1,1 @@
-{{Client|image=Client-Etude.png| name=Etude Music Player| author=SzentandrÃ¡si IstvÃ¡n| website=http://code.google.com/p/etude-music-player/| version= no release yet| devlanguage=Python| ui=GTK| screenshots=[http://wiki.etude-music-player.googlecode.com/hg/screenshots/interface.jpg] [http://wiki.etude-music-player.googlecode.com/hg/screenshots/medialib.jpg]| description=Etude is a new client developed by SzentandrÃ¡si IstvÃ¡n. The goal of this project is a full featured XMMS2 client.}}
+{{Client|image=Client-Etude.png| name=Etude Music Player| author=SzentandrÃ¡si IstvÃ¡n| website=http://code.google.com/p/etude-music-player/| version= 0.1 | devlanguage=Python| ui=GTK| screenshots=[http://wiki.etude-music-player.googlecode.com/hg/screenshots/interface.jpg] [http://wiki.etude-music-player.googlecode.com/hg/screenshots/medialib.jpg]| description=Etude is a new client developed by SzentandrÃ¡si IstvÃ¡n. The goal of this project is a full featured XMMS2 client.}}
