Levitation import of page 2539 rev 8972.

--- a/10-Template/Collections 2.0 Fetchdict.mediawiki
+++ b/10-Template/Collections 2.0 Fetchdict.mediawiki
@@ -8,7 +8,7 @@ __NOEDITSECTION__
 |-
 ! style="text-align:left; padding-right: 20px; vertical-align:top;" | Description
 | style="vertical-align:top;" |
-{{{result}}}
+{{{desc}}}
 |-
 ! style="text-align:left; padding-right: 20px; vertical-align:top;" | Attributes
 | style="vertical-align:top;" |
